# LiquidLearn

./: Errors.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  main.rs  migrations.rs
src-tauri/src/commands/: attempt_commands.rs  error_log_commands.rs  error_logging_commands.rs  fsrs_commands.rs  mod.rs  problem_commands.rs  study_phase_commands.rs  subject_commands.rs  theory_commands.rs  topic_commands.rs
src-tauri/src/db/: mod.rs  tests.rs
src-tauri/src/fsrs/: algorithm.rs  mod.rs  parameters.rs  tests.rs
src-tauri/src/migrations/: 004_error_logging.sql
src-tauri/src/models/: attempt.rs  error_log.rs  error_logging.rs  fsrs.rs  mod.rs  problem.rs  study_phase.rs  subject.rs  theory.rs  topic.rs
src-tauri/src/services/: attempt_service.rs  error_log_service.rs  error_logging_service.rs  fsrs_service.rs  mod.rs  problem_service.rs  study_phase_service.rs  subject_service.rs  theory_service.rs  topic_service.rs
src-tauri/tests/: integration_test.rs
src/components/: Navigation.css  Navigation.tsx
src/components/cards/: BaseCard.tsx  DashboardCard.tsx  ErrorLogsCard.tsx  HeatMapCard.tsx  MasteryCard.tsx  ProblemListCard.tsx  StatsCard.tsx  SubjectListCard.tsx  TimerCard.tsx
src/components/layout/: ThemeProvider.tsx
src/components/modals/: AttemptModal.tsx  GuidelinesModal.tsx
src/components/pages/: Dashboard.tsx
src/hooks/: index.ts  useFsrs.ts  useProblems.ts  useTimer.ts
src/lib/: constants.ts  tauri-api.ts
src/models/: error-logging.ts
src/pages/: Analytics.tsx  Dashboard.tsx  ProblemBrowser.css  ProblemBrowser.tsx  ProblemDetail.css  ProblemDetail.tsx  ReviewSession.css  ReviewSession.tsx
src/stores/: appStore.ts  timerStore.ts  uiStore.ts
src/styles/: App.css  tailwind.css
src/types/: index.ts
