[package]
name = "learning-app"
version = "0.1.0"
description = "Hierarchical learning system with FSRS spaced repetition"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Ensure webkit2gtk is ONLY for Linux
[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "0.18"
cocoa = "0.24"
objc = "0.2"
